--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 <head>
     
     <meta charset="utf-8">
-    <base href="http://spencerlyon2.github.io/hugo_gh_blog">
+    <base href="https://spencerlyon2.github.io/hugo_gh_blog">
     <title>Hugo Blog Template for GitHub Pages</title>
     <link rel="canonical" href="http://spencerlyon2.github.io/hugo_gh_blog/">
-    <link href="http://spencerlyon2.github.io/hugo_gh_blog/index.xml" rel="alternate" type="application/rss+xml" title="Hugo Blog Template for GitHub Pages" />
+    <link href="https://spencerlyon2.github.io/hugo_gh_blog/index.xml" rel="alternate" type="application/rss+xml" title="Hugo Blog Template for GitHub Pages" />
 	<link rel="shortcut icon" href="http://spencerlyon2.github.io/hugo_gh_blog/favicon.ico" type="image/x-icon"/>
 
     
 
-<link rel="stylesheet" href="http://spencerlyon2.github.io/hugo_gh_blog/css/poole.css">
-<link rel="stylesheet" href="http://spencerlyon2.github.io/hugo_gh_blog/css/syntax.css">
-<link rel="stylesheet" href="http://spencerlyon2.github.io/hugo_gh_blog/css/lanyon.css">
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
+<link rel="stylesheet" href="https://spencerlyon2.github.io/hugo_gh_blog/css/poole.css">
+<link rel="stylesheet" href="https://spencerlyon2.github.io/hugo_gh_blog/css/syntax.css">
+<link rel="stylesheet" href="https://spencerlyon2.github.io/hugo_gh_blog/css/lanyon.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
 
 </head>
   <body class="theme-base-08" lang="en">
@@ -30,14 +30,14 @@
 <div class="sidebar" id="sidebar">
 
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item" href="http://spencerlyon2.github.io/hugo_gh_blog/">Home</a>
+    <a class="sidebar-nav-item" href="https://spencerlyon2.github.io/hugo_gh_blog/">Home</a>
 
-    <a class="sidebar-nav-item" href="http://spencerlyon2.github.io/hugo_gh_blog/posts">Blog</a>
+    <a class="sidebar-nav-item" href="https://spencerlyon2.github.io/hugo_gh_blog/posts">Blog</a>
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; 2014 Spencer Lyon. Powered by <a href="http://hugo.spf13.com">Hugo</a>. Design adapted from <a href="http://lanyon.getpoole.com">Lanyon</a>.
+      &copy; 2014 Spencer Lyon. Powered by <a href="https://hugo.spf13.com">Hugo</a>. Design adapted from <a href="http://lanyon.getpoole.com">Lanyon</a>.
     </p>
   </div>
 </div>
@@ -48,7 +48,7 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
-            <a href="http://spencerlyon2.github.io/hugo_gh_blog/" title="Home">Home</a>
+            <a href="https://spencerlyon2.github.io/hugo_gh_blog/" title="Home">Home</a>
           </h3>
         </div>
       </div>
