--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="https://spencerlyon2.github.io/hugo_gh_blog/index.xml" rel="alternate" type="application/rss+xml" title="Hugo Blog Template for GitHub Pages" />
 	<link rel="shortcut icon" href="http://spencerlyon2.github.io/hugo_gh_blog/favicon.ico" type="image/x-icon"/>
 
-    
+<ul>
+  <li><a href="https://github.com/adam24" rel="me">Github</a></li>
+</ul>
 
 <link rel="stylesheet" href="https://spencerlyon2.github.io/hugo_gh_blog/css/poole.css">
 <link rel="stylesheet" href="https://spencerlyon2.github.io/hugo_gh_blog/css/syntax.css">
